@@ -2,6 +2,8 @@ launchpad-buildd (116) UNRELEASED; urgency=low
 
   [ Colin Watson ]
   * Remove obsolete BuilderStatus.ABORTED.
+  * If the expected .changes file doesn't exist, consider this as a package
+    build failure rather than crashing (LP: #993642).
 
   [ Adam Conrad ]
   * Tidy up log formatting of the "Already reaped..." message. 
